--- a/client/src/styles/blog-listing.css
+++ b/client/src/styles/blog-listing.css
@@ -17,7 +17,7 @@
 /* Header */
 .blog-listing-header {
   width: 100%;
-  text-align: left;
+  text-align: center;
   padding: 10px 0;
   margin-bottom: 20px;
 }
